shops/101977/blocks/menu/logo.css
.loger {
    position: absolute;
    z-index: 999;
    color: white;
    font-family: inter;
    font-size: 3em;
    left: 290px;
    top: 55px;
}

.logo img {
    max-width: 200px;
    max-height: 61px;
}

.checkout-checkout .logo img {
    max-width: 147px;
    max-height: 61px;
}

#home > div > header > div.header-wrapper > div.container > div.logo {
    position: relative;
    left: -50px;
}

